# gemini-inetd

./: Cargo.toml  README.md
gemroot/: example.gmi
src/: main.rs
